--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001 --turbopack",
+    "dev": "next dev --port 3001 --turbopack --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -14,10 +14,12 @@
     "@floating-ui/react": "^0.27.16",
     "@repo/ui": "workspace:*",
     "next": "^15.4.2",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-player": "^3.3.3"
+    "react-player": "^3.3.3",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.4.6",
