--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
+    "next-auth": "^4.24.11",
     "react-icons": "^5.5.0",
-    "react-player": "^3.3.3"
+    "react-player": "^3.3.3",
+    "swr": "^2.3.6"
   }
 }
