--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
     "@repo/ui": "workspace:*",
+    "bcrypt": "^6.0.0",
+    "mongoose": "^8.19.1",
     "next": "^15.4.2",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
@@ -27,6 +29,7 @@
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.5",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
