--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,8 +5,7 @@
   },
   "include": [
     "src",
-    "../../apps/web/components/Header.tsx",
-    "../../apps/web/components/video-post.tsx"
+    "types/*"
   ],
   "exclude": [
     "dist",
