--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
+    "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
